Increase PermGen size for testing